_build/_log
### Starting build.
# Target: cobra.ml.depends, tags: { extension:ml, file:cobra.ml, ocaml, ocamldep, quiet }
/Users/bailytroyer/.opam/default/bin/ocamldep.opt -modules cobra.ml > cobra.ml.depends
# Target: ast.ml.depends, tags: { extension:ml, file:ast.ml, ocaml, ocamldep, quiet }
/Users/bailytroyer/.opam/default/bin/ocamldep.opt -modules ast.ml > ast.ml.depends # cached
# Target: ast.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:ast.cmo, file:ast.ml, implem, ocaml, quiet }
/Users/bailytroyer/.opam/default/bin/ocamlc.opt -c -o ast.cmo ast.ml # cached
# Target: cobraparse.mly, tags: { extension:mly, file:cobraparse.mly, infer, ocaml, ocamlyacc, parser, quiet }
/Users/bailytroyer/.opam/default/bin/ocamlyacc cobraparse.mly # cached
# Target: cobraparse.mli.depends, tags: { extension:mli, file:cobraparse.mli, ocaml, ocamldep, quiet }
/Users/bailytroyer/.opam/default/bin/ocamldep.opt -modules cobraparse.mli > cobraparse.mli.depends # cached
# Target: cobraparse.cmi, tags: { byte, compile, extension:mli, file:cobraparse.mli, interf, ocaml, quiet }
/Users/bailytroyer/.opam/default/bin/ocamlc.opt -c -o cobraparse.cmi cobraparse.mli # cached
# Target: irgen.ml.depends, tags: { extension:ml, file:irgen.ml, ocaml, ocamldep, quiet }
/Users/bailytroyer/.opam/default/bin/ocamldep.opt -modules irgen.ml > irgen.ml.depends
# Target: sast.ml.depends, tags: { extension:ml, file:sast.ml, ocaml, ocamldep, quiet }
/Users/bailytroyer/.opam/default/bin/ocamldep.opt -modules sast.ml > sast.ml.depends # cached
# Target: sast.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:sast.cmo, file:sast.ml, implem, ocaml, quiet }
/Users/bailytroyer/.opam/default/bin/ocamlc.opt -c -o sast.cmo sast.ml # cached
# Target: scanner.mll, tags: { extension:mll, file:scanner.mll, lexer, ocaml, ocamllex, quiet }
/Users/bailytroyer/.opam/default/bin/ocamllex.opt -q scanner.mll # cached
# Target: scanner.ml.depends, tags: { extension:ml, file:scanner.ml, ocaml, ocamldep, quiet }
/Users/bailytroyer/.opam/default/bin/ocamldep.opt -modules scanner.ml > scanner.ml.depends # cached
# Target: scanner.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:scanner.cmo, file:scanner.ml, implem, ocaml, quiet }
/Users/bailytroyer/.opam/default/bin/ocamlc.opt -c -o scanner.cmo scanner.ml # cached
# Target: semant.ml.depends, tags: { extension:ml, file:semant.ml, ocaml, ocamldep, quiet }
/Users/bailytroyer/.opam/default/bin/ocamldep.opt -modules semant.ml > semant.ml.depends # cached
# Target: semant.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:semant.cmo, file:semant.ml, implem, ocaml, quiet }
/Users/bailytroyer/.opam/default/bin/ocamlc.opt -c -o semant.cmo semant.ml # cached
# Target: irgen.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:irgen.cmo, file:irgen.ml, implem, ocaml, quiet }
/Users/bailytroyer/.opam/default/bin/ocamlc.opt -c -o irgen.cmo irgen.ml
+ /Users/bailytroyer/.opam/default/bin/ocamlc.opt -c -o irgen.cmo irgen.ml
File "irgen.ml", line 15, characters 11-15:
15 | module L = Llvm
                ^^^^
Error: Unbound module Llvm
Command exited with code 2.
# Compilation unsuccessful.
